--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.716.0",
     "aws-amplify": "^6.11.0"
   }
 }
